--- a/src/Web/Views/Shared/_LayoutSuperAdmin.cshtml
+++ b/src/Web/Views/Shared/_LayoutSuperAdmin.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Projects">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="UsersSuperAdmin">All users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UsersSuperAdmin">All users</a>
                         </li>
                     </ul>
                 </div>
