--- a/src/Web/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/Web/Views/Shared/_LayoutAdmin.cshtml
@@ -1,7 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Jineo.Extentions
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -14,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@(User.FindFirst("CompanyName")?.Value)</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Jineo</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Projects">Projects</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Project">Project</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Company">CompanyPage</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UsersAdmin">All users</a>
                         </li>
                     </ul>
                 </div>
