--- a/src/Web/Views/_ViewStart.cshtml
+++ b/src/Web/Views/_ViewStart.cshtml
@@ -4,18 +4,23 @@
     {
         if(this.User.IsInRole("SuperAdmin"))
         {
-            Layout = "/Views/Shared/_LayoutSUperAdmin.cshtml";
+            Layout = "/Views/Shared/_LayoutSuperAdmin.cshtml";
         }
         else
         {
-            if(User.Identity.IsEmployed())
-            {
-                Layout = "/Views/Shared/_Layout.cshtml";
-            }
-            else
-            {
-                Layout = "/Views/Shared/_LayoutGuest.cshtml";
-            }
+            
+                if(User.IsInRole("Admin"))
+                {
+                    Layout = "/Views/Shared/_LayoutAdmin.cshtml";
+                }
+                else if(User.IsInRole("Employee"))
+                {
+                    Layout = "/Views/Shared/_Layout.cshtml";
+                }
+                else 
+                {
+                    Layout = "/Views/Shared/_Layout.cshtml";
+                }
         }
     }
     else    
