--- a/src/Web/Views/Projects/Project.cshtml
+++ b/src/Web/Views/Projects/Project.cshtml
@@ -39,6 +39,7 @@
     window.onload = function() {
         loadProjectInfo('@Model.Project.Id')
         getUsersList('@Model.Project.Id')
+        loadIssues('@Model.Project.Id')
     }
 </script>
 </html>
