--- a/src/Web/Views/Projects/Project.cshtml
+++ b/src/Web/Views/Projects/Project.cshtml
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="container-flex">
+      
+    
     <div class="container-40">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
@@ -33,6 +36,16 @@
             </div>
           </div>    
     </div>
+      <div class="card-shadow container-60">
+        <div class="card-header card-header-city">
+            Info
+        </div>
+      <div class="card-body">
+            @Html.Partial("_BlueprintPartial", new PartialModel() { Id = -1 })
+      </div>  
+    </div>
+
+  </div>
 </body>
 
 <script>
@@ -40,6 +53,7 @@
         loadProjectInfo('@Model.Project.Id')
         getUsersList('@Model.Project.Id')
         loadIssues('@Model.Project.Id')
+        initBlueprint(content.building, content.sensors)
     }
 </script>
 </html>
