--- a/src/Web/Views/Shared/_BlueprintPartial.cshtml
+++ b/src/Web/Views/Shared/_BlueprintPartial.cshtml
@@ -23,7 +23,8 @@
     <div id="canvasdiv" style="width: 100%; height: 400px; overflow: scroll">
         <canvas id="c" width="1000" height="600"></canvas>
     </div>
-    <div class="" style="width: 500px;">
+    <div class="" style="width: 500px;"> 
+        <button class="btn btn-danger" onclick="addToIssue()">Add to issue</button>
         <canvas id="myChart">
     </div>
     <div style="width: 500px; height: 400px; overflow: scroll;">
@@ -42,6 +43,9 @@
     <script>
         var content = generateBuilding(5,5,100,50)
         console.log(content)
+        function addToIssue() {
+            addSensorToIssue( { id: mySensor.id, name: mySensor.name } )
+        }
     </script>
 </body>
 </html>
