--- a/src/Web/Views/Shared/_IssuesPartial.cshtml
+++ b/src/Web/Views/Shared/_IssuesPartial.cshtml
@@ -128,7 +128,7 @@
                     r += '<div class="card-header" id="headingOne">'
                     r += '<h2 class="mb-0">'
                     r += '<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse' + i +'" aria-expanded="true" aria-controls="collapse' + i +'">'
-                    r += '[' + response.issues[i].status + '] '
+                    r += '<label id="status-'+ response.issues[i].id + '">[' + response.issues[i].status + ']</label>'
                     r += response.issues[i].title
                     r += '</button>'
                     r += '</h2>'
@@ -136,8 +136,7 @@
                     r += '<div id="collapse' + i +'" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">'
                     r += '<div class="card-body">'
                     var status = "'FUCKED'"
-                    r += '<input id="f" type="radio" onclick="changeStatus('+ response.issues[i].id +', '+ status +')"/>'
-                    r += '<label for="f">Fucked<label/>'
+                    r += '<button id="f" class="btn btn-outline-primary" type="radio" onclick="changeStatus('+ response.issues[i].id +', '+ status +')">Switch state</button>'
                     response.issues[i].issueSensors.forEach(s => {
                         r += '<div class="container-flex">' 
                         r += '<div class="issue-sensor" onclick="selectSensor(' + s.sensorId + ')">' + s.sensor.name + '</div>'
@@ -185,7 +184,7 @@
         },
         url: '/changestatus',
         success: function (response) {
-            alert(response)
+            document.getElementById('status-' + response.id).innerHTML = '[' + response.status + ']'
         }
         }
         )
