--- a/src/Web/Views/Shared/_IssuesPartial.cshtml
+++ b/src/Web/Views/Shared/_IssuesPartial.cshtml
@@ -11,9 +11,12 @@
     <title>Document</title>
 </head>
 <body>
-    <a class="btn btn-primary" style="width: 100%;" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-          Add new issue
-    </a>
+    @if(@Model.ReadOnly != true)
+    {
+        <a class="btn btn-primary" style="width: 100%;" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Add new issue
+        </a>
+    }
     <div class="collapse" id="collapseExample">
         <div class="card card-body">
         <label for="">Sensors</label>
@@ -90,9 +93,6 @@
             for(var k = 0; k < response.comments.length; k++)
             {
                 r += '<article class="comment">'
-                r += '<a class="comment-img" href="#non">'
-                r += '<img src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg" alt="" width="50" height="50">'
-                r += '</a>'
                 r += '<div class="comment-body">'
                 r += '<div class="text">'
                 r += '<p>' + response.comments[k].text + '</p>'
@@ -148,9 +148,6 @@
                     for(var k = 0; k < response.issues[i].comments.length; k++)
                     {
                         r += '<article class="comment">'
-                        r += '<a class="comment-img" href="#non">'
-                        r += '<img src="https://image.shutterstock.com/image-photo/portrait-smiling-red-haired-millennial-260nw-1194497251.jpg" alt="" width="50" height="50">'
-                        r += '</a>'
                         r += '<div class="comment-body">'
                         r += '<div class="text">'
                         r += '<p>' + response.issues[i].comments[k].text + '</p>'
