--- a/src/Web/Views/Home/Index.cshtml
+++ b/src/Web/Views/Home/Index.cshtml
@@ -10,8 +10,18 @@
     }
     else 
     {
-        <p>CONTENT</p>    
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        if(this.User.IsInRole("Banned"))
+        {
+            <h2 class="text-danger"> 
+                You account is banned. Contact jineosupport@gmail.com for mor info.
+            </h2>
+        }
+        else
+        {
+
+            <p>CONTENT</p>    
+            <h1 class="display-4">Welcome</h1>
+            <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        }
     }
 </div>
